rabbitmq/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: microservices
spec:
  type: NodePort
  ports:
    - name: ui
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 31111
    - name: backend
      protocol: TCP
      port: 5672
      targetPort: 5672
  selector:
    app-name: rabbitmq
