rabbitmq/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "rabbitmq.demo.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
